--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                         id="footer-input" placeholder="E-mail" required></label>
                 <button class="footer-button" type="submit">Subscribe
                     <svg class="footer-icon" width="24" height="24">
-                        <use href="./images/icons.svg#icon-send"></use>
+                        <use href="./images/icons.svg#icon-icon-send"></use>
                     </svg>
                 </button>
             </form>
@@ -422,7 +422,7 @@
         <div class="modal">
             <button class="modal-close" type="button" data-modal-close>
                 <svg class="icon-close" width="8" height="8">
-                    <use href="./images/icons.svg#icon-close"></use>
+                    <use href="./images/icons.svg#icon-icon-close"></use>
                 </svg>
             </button>
             <p class="modal-txt">Leave your contacts and we will call you back</p>
@@ -432,7 +432,7 @@
                     <div class="div-modal-input">
                         <input class="modal-input" type="text" name="user-name" id="user-name" required>
                         <svg class="icon-input" width="18" height="24">
-                            <use href="./images/icons.svg#icon-name"></use>
+                            <use href="./images/icons.svg#icon-icon-name"></use>
                         </svg>
                     </div>
                 </div>
@@ -440,8 +440,8 @@
                     <label class="modal-label" for="phone">Phone</label>
                     <div class="div-modal-input">
                         <input class="modal-input" type="tel" name="user-phone" id="phone" required>
-                        <svg class="icon-input" width="18" height="24">
-                            <use href="./images/icons.svg#icon-tel"></use>
+                        <svg class="icon-icon-input" width="18" height="24">
+                            <use href="./images/icons.svg#icon-icon-tel"></use>
                         </svg>
                     </div>
                 </div>
@@ -449,8 +449,8 @@
                     <label class="modal-label" for="email">Email</label>
                     <div class="div-modal-input">
                         <input type="email" name="user-email" id="email" class="modal-input" required>
-                        <svg class="icon-input" width="18" height="24">
-                            <use href="./images/icons.svg#icon-email"></use>
+                        <svg class="icon-icon-input" width="18" height="24">
+                            <use href="./images/icons.svg#icon-icon-email"></use>
                         </svg>
                     </div>
                 </div>
@@ -466,7 +466,7 @@
                     <label class="modal-pp" for="user-privacy">
                         <span class="label-span">
                             <svg class="icon-checkbox" width="10" height="8">
-                                <use href="./images/icons.svg#icon-point"></use>
+                                <use href="./images/icons.svg#icon-icon-point"></use>
                             </svg>
                         </span>
                         I accept the terms and conditions of the&nbsp;<a href="" target="_blank"
