--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
     <div class="backdrop" data-modal>
         <div class="modal">
             <button class="modal-close" type="button" data-modal-close>
-                <svg class="icon-close" width="8" height="8">
+                <svg class="icon-icon-close" width="8" height="8">
                     <use href="./images/icons.svg#icon-icon-close"></use>
                 </svg>
             </button>
@@ -431,7 +431,7 @@
                     <label class="modal-label" for="user-name">Name</label>
                     <div class="div-modal-input">
                         <input class="modal-input" type="text" name="user-name" id="user-name" required>
-                        <svg class="icon-input" width="18" height="24">
+                        <svg class="icon-icon-input" width="18" height="24">
                             <use href="./images/icons.svg#icon-icon-name"></use>
                         </svg>
                     </div>
