--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <section class="section-one">
             <div class="container">
                 <h1 class="section-one-h">Effective Solutions for Your Business</h1>
-                <button class="section-button" type="button">Order Service</button>
+                <button class="section-button" type="button" data-modal-open>Order Service</button>
             </div>
         </section>
            
@@ -420,7 +420,7 @@
 
     <div class="backdrop" data-modal>
         <div class="modal">
-            <button class="modal-close" type="button" data-modal-close>
+            <button type="button" class="modal-close" data-modal-close>
                 <svg class="icon-icon-close" width="8" height="8">
                     <use href="./images/icons.svg#icon-icon-close"></use>
                 </svg>
