--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <section class="section-one">
             <div class="container">
                 <h1 class="section-one-h">Effective Solutions for Your Business</h1>
-                <button class="section-button" type="button" data-modal-open>Order Service</button>
+                <button class="btn section-button" type="button" data-modal-open>Order Service</button>
             </div>
         </section>
 
@@ -420,8 +420,8 @@
     <div class="backdrop" data-modal>
         <div class="modal">
             <button type="button" class="modal-close" data-modal-close>
-                <svg class="icon-icon-close" width="8" height="8">
-                    <use href="./images/icons.svg#icon-icon-close"></use>
+                <svg class="icon-close" width="8" height="8">
+                    <use href="./images/icons.svg#icon-close"></use>
                 </svg>
             </button>
             <p class="modal-txt">Leave your contacts and we will call you back</p>
@@ -430,8 +430,8 @@
                     <label class="modal-label" for="user-name">Name</label>
                     <div class="div-modal-input">
                         <input class="modal-input" type="text" name="user-name" id="user-name" required>
-                        <svg class="icon-icon-input" width="18" height="24">
-                            <use href="./images/icons.svg#icon-icon-name"></use>
+                        <svg class="icon-input" width="18" height="24">
+                            <use href="./images/icons.svg#icon-name"></use>
                         </svg>
                     </div>
                 </div>
@@ -439,8 +439,8 @@
                     <label class="modal-label" for="phone">Phone</label>
                     <div class="div-modal-input">
                         <input class="modal-input" type="tel" name="user-phone" id="phone" required>
-                        <svg class="icon-icon-input" width="18" height="24">
-                            <use href="./images/icons.svg#icon-icon-tel"></use>
+                        <svg class="icon-input" width="18" height="24">
+                            <use href="./images/icons.svg#icon-tel"></use>
                         </svg>
                     </div>
                 </div>
@@ -448,8 +448,8 @@
                     <label class="modal-label" for="email">Email</label>
                     <div class="div-modal-input">
                         <input type="email" name="user-email" id="email" class="modal-input" required>
-                        <svg class="icon-icon-input" width="18" height="24">
-                            <use href="./images/icons.svg#icon-icon-email"></use>
+                        <svg class="icon-input" width="18" height="24">
+                            <use href="./images/icons.svg#icon-email"></use>
                         </svg>
                     </div>
                 </div>
@@ -465,7 +465,7 @@
                     <label class="modal-pp" for="user-privacy">
                         <span class="label-span">
                             <svg class="icon-checkbox" width="10" height="8">
-                                <use href="./images/icons.svg#icon-icon-point"></use>
+                                <use href="./images/icons.svg#icon-point"></use>
                             </svg>
                         </span>
                         I accept the terms and conditions of the&nbsp;<a href="" target="_blank"
