--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
                     <label class="modal-pp" for="user-privacy">
                         <span class="label-span">
                             <svg class="icon-checkbox" width="10" height="8">
-                                <use href="./images/icons.svg#icon-point"></use>
+                                <use href=".//images/icons.svg#icon-point"></use>
                             </svg>
                         </span>
                         I accept the terms and conditions of the&nbsp;<a href="" target="_blank"
