--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
         <div class="modal">
             <button type="button" class="modal-close" data-modal-close>
                 <svg class="icon-close" width="8" height="8">
-                    <use href="./images/icons.svg#icon-close"></use>
+                    <use href="./images/icons.svg#icon-icon-close"></use>
                 </svg>
             </button>
             <p class="modal-txt">Leave your contacts and we will call you back</p>
@@ -429,27 +429,27 @@
                 <div class="div-modal-form-box">
                     <label class="modal-label" for="user-name">Name</label>
                     <div class="div-modal-input">
-                        <input class="modal-input" type="text" name="user-name" id="user-name" required>
+                        <input class="modal-input" type="text" name="user-name" required id="user-name"/>
                         <svg class="icon-input" width="18" height="24">
-                            <use href="./images/icons.svg#icon-name"></use>
+                            <use href="./images/icons.svg#icon-icon-name"></use>
                         </svg>
                     </div>
                 </div>
                 <div class="div-modal-form-box">
                     <label class="modal-label" for="phone">Phone</label>
                     <div class="div-modal-input">
-                        <input class="modal-input" type="tel" name="user-phone" id="phone" required>
+                        <input class="modal-input" type="tel" name="user-phone" required id="phone" />
                         <svg class="icon-input" width="18" height="24">
-                            <use href="./images/icons.svg#icon-tel"></use>
+                            <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
                         </svg>
                     </div>
                 </div>
                 <div class="div-modal-form-box">
                     <label class="modal-label" for="email">Email</label>
                     <div class="div-modal-input">
-                        <input type="email" name="user-email" id="email" class="modal-input" required>
+                        <input class="modal-input" type="email" name="user-email" required id="email"/>
                         <svg class="icon-input" width="18" height="24">
-                            <use href="./images/icons.svg#icon-email"></use>
+                            <use href="./images/icons.svg#icon-icon-email"></use>
                         </svg>
                     </div>
                 </div>
@@ -461,17 +461,15 @@
                 </div>
                 <div class="checkbox">
                     <input class="visually-hidden checkbox-input" type="checkbox" id="user-privacy" name="user-privacy"
-                        value="true">
+                        value="true"/>
                     <label class="modal-pp" for="user-privacy">
                         <span class="label-span">
                             <svg class="icon-checkbox" width="10" height="8">
-                                <use href=".//images/icons.svg#icon-point"></use>
+                                <use href="./images/icons.svg#icon-Vector"></use>
                             </svg>
                         </span>
-                        I accept the terms and conditions of the&nbsp;<a href="" target="_blank"
-                            class="privacy-policy-link">Privacy
-                            Policy</a>
-                    </label>
+                        I accept the terms and conditions of the <a class="policy-part" href="">Privacy Policy</a>
+                        </label>
                 </div>
                 <button class="modal-button" type="submit">Send</button>
             </form>
@@ -482,3 +480,6 @@
 </body>
 
 </html>
+
+<a href="" target="_blank" class="privacy-policy-link">Privacy
+    Policy</a>
